package gl.frames;

import gl.frames.rules.Frame;

public class GLFrame extends Frame {
	/**
	 * Create an OpenGL rendering window
	 */
	public GLFrame() {
		super();
	}
}
